fix: adjust flex and grid classes for better alignment

--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -394,6 +394,16 @@
       line-height: var(--tw-leading, var(--tw-text-3xl--line-height));
     }
   }
+  .tw\:lg\:grid-cols-3 {
+    @media (width >= 990px) {
+      grid-template-columns: repeat(3, minmax(0, 1fr));
+    }
+  }
+  .tw\:lg\:flex-row {
+    @media (width >= 990px) {
+      flex-direction: row;
+    }
+  }
 }
 @layer components {
   .tw-badge {
